Complete cart api & adapt order api