@@ -1,6 +1,7 @@
 package tinyfingers.simplilearn.foodieapp.controller;
 
 
+import io.micrometer.common.util.StringUtils;
 import jakarta.annotation.Nullable;
 import jakarta.servlet.http.HttpSession;
 import lombok.RequiredArgsConstructor;
@@ -8,17 +9,25 @@ import lombok.extern.slf4j.Slf4j;
 import lombok.val;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestHeader;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
-import tinyfingers.simplilearn.foodieapp.model.api.Cart;
-import tinyfingers.simplilearn.foodieapp.model.api.CartItem;
+import tinyfingers.simplilearn.foodieapp.mapper.DomainApiMapper;
+import tinyfingers.simplilearn.foodieapp.model.api.CartAPI;
+import tinyfingers.simplilearn.foodieapp.model.api.CartItemAPI;
+import tinyfingers.simplilearn.foodieapp.model.domain.Cart;
+import tinyfingers.simplilearn.foodieapp.model.domain.CartItem;
+import tinyfingers.simplilearn.foodieapp.model.domain.Sellable;
+import tinyfingers.simplilearn.foodieapp.repository.CartRepository;
+import tinyfingers.simplilearn.foodieapp.repository.RestaurantsRepository;
+import tinyfingers.simplilearn.foodieapp.repository.SellableRepository;
 
 import java.util.HashMap;
 import java.util.List;
@@ -33,23 +42,30 @@ public class CartController {
 
   private static Map<String, Cart> carts = new HashMap<>();
 
-  @GetMapping("/carts/{cardId}")
-  public ResponseEntity<Cart> getCart(@PathVariable("cardId") String cardId, @RequestParam @Nullable String userId, HttpSession session) {
+  private final CartRepository cartRepository;
+  private final SellableRepository sellableRepository;
+  private final RestaurantsRepository restaurantsRepository;
+
+  private final DomainApiMapper domainApiMapper;
+
+  @GetMapping("/cart")
+  public ResponseEntity<CartAPI> getCart(@RequestHeader("userId") @Nullable String userId, HttpSession session) {
     String identifier = userId == null ? session.getId() : userId;
-    log.info("Get cart with id {} for userId {} and sessionId {}. Use identifier {} ", cardId, userId, session.getId(), identifier);
+    log.info("Get cart for userId {} and sessionId {}. Use identifier {} ", userId, session.getId(), identifier);
 
-    if (!carts.isEmpty()) {
-      return ResponseEntity.ok(carts.get(identifier));
-    }
+    val cart = cartRepository.findByUserIdOrSessionId(userId, session.getId());
 
-    val cart = new Cart();
-    val cartItems = List.of(
-            new CartItem(1L, 1, "Pizza", 6.90),
-            new CartItem(2L, 2, "Coca-Cola", 2.50));
-    cart.setCardItems(cartItems);
-    cart.setUserId("user1");
+    return cart
+            .map(value -> {
+              val api = domainApiMapper.map(value);
+              val totalPrice = api.getCartItems().stream()
+                      .mapToDouble(item -> item.getQuantity() * item.getUnitPrice())
+                      .sum();
+              api.setTotalPrice(totalPrice);
+              return ResponseEntity.ok(api);
+            })
+            .orElseGet(() -> new ResponseEntity<>(HttpStatus.NOT_FOUND));
 
-    return ResponseEntity.ok(cart);
   }
 
   @GetMapping("/carts")
@@ -58,16 +74,49 @@ public class CartController {
   }
 
   @PostMapping("/cart")
-  public ResponseEntity<Cart> createCart(@RequestBody Cart cart, @RequestParam @Nullable String userId, HttpSession session) {
-    if (userId != null && !userId.isBlank()) {
-      cart.setSessionId(session.getId());
+  @Transactional
+  public ResponseEntity<CartAPI> createCart(@RequestBody CartAPI cartAPI, @RequestParam @Nullable String userId, HttpSession session) {
+    if (StringUtils.isBlank(userId)) {
+      cartAPI.setSessionId(session.getId());
     } else {
-      cart.setUserId(userId);
+      cartAPI.setUserId(userId);
     }
-    String identifier = userId == null ? session.getId() : userId;
-    carts.put(identifier, cart);
-    log.info("Registered cart {} for identifier {}", cart, identifier);
-    return ResponseEntity.ok(cart);
+
+    val restaurantId = cartAPI.getRestaurantId();
+    val sellables = sellableRepository.findAllByRestaurantId(restaurantId);
+    if (!allCartItemsContained(cartAPI.getCartItems(), sellables)) return ResponseEntity.badRequest().build();
+
+    val cart = domainApiMapper.map(cartAPI);
+    cartRepository
+            .findByUserIdOrSessionId(userId, session.getId())
+            .ifPresent(existingCart -> cart.setId(existingCart.getId()));
+    val cartItems = cartAPI.getCartItems()
+            .stream()
+            .map(cartItemAPI -> {
+              CartItem cartItem = domainApiMapper.map(cartItemAPI);
+              Sellable sellable = sellables.stream()
+                      .filter(s -> s.getId().equals(cartItemAPI.getMenuItemId()))
+                      .findFirst()
+                      .orElseThrow();
+              cartItem.setMenuItem(sellable);
+              cartItem.setName(sellable.getName());
+              return cartItem;
+            })
+            .toList();
+
+    cart.setRestaurant(restaurantsRepository.findById(restaurantId).orElseThrow());
+    cart.setCartItems(cartItems);
+
+    cartRepository.save(cart);
+
+    return ResponseEntity.ok(domainApiMapper.map(cart));
+  }
+
+  private boolean allCartItemsContained(List<CartItemAPI> cartItems, List<Sellable> sellables) {
+    return cartItems
+            .stream()
+            .allMatch(cartItem -> sellables.stream()
+                    .anyMatch(sellable -> sellable.getId().equals(cartItem.getMenuItemId())));
   }
 
   @PostMapping("/carts/clear")
